[tool.poetry]
name = "skq"
version = "0.1.0"
description = "Convenient Quantum Components"
authors = ["Carlo Lepelaars"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
numpy = ">=1.21,<2.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
qiskit = "^1.1.1"
matplotlib = "^3.9.1"
pylatexenc = "^2.10"
scipy = "^1.14.0"
pennylane = "^0.37.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
